# mano

./: .mcp.json  .tarpaulin.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
bench/: fib.js  fib.mano  heavy.js  heavy.mano  loop.js  loop.mano  mega.js  mega.mano  primes.js  primes.mano  primes_10k.js  primes_10k.mano
editors/vscode/: language-configuration.json  (+2 more)
examples/: bagulho.mano  closure.mano  collatz.mano  erros.mano  erros_parser.mano  erros_resolver.mano  erros_runtime.mano  erros_scanner.mano  escopo.mano  fatorial.mano  fibonacci.mano  fizzbuzz.mano  gcd.mano  heranca.mano  interpolacao.mano  lambda.mano  logica.mano  minsky.mano  primo.mano  saifora.mano  tudo.mano  unicode.mano  vitrine.mano
mano/: Cargo.toml
mano-cli/: Cargo.toml
mano-cli/src/: completer.rs  main.rs  report.rs  state.rs  vm.rs
mano-cli/src/snapshots/: mano__report__tests__report_error_renders_multibyte_utf8_spans.snap  mano__report__tests__snapshot_parse_error.snap  mano__report__tests__snapshot_runtime_error.snap  mano__report__tests__snapshot_scan_error.snap
mano-cli/tests/: cli.rs
mano-cli/tests/snapshots/: cli__file_errors_show_filename.snap  cli__repl_errors_use_ariadne_format.snap
mano-lsp/: Cargo.toml
mano-mcp/: Cargo.toml
mano-mcp/src/: cli.rs  lib.rs  main.rs  server.rs  tools.rs
mano-mcp/tests/: server.rs
mano-vm/: Cargo.toml
src/: ast.rs  environment.rs  error.rs  interpreter.rs  lib.rs  main.rs  parser.rs  scanner.rs  token.rs
tests/: cli.rs  repl_interactive.rs  scanner_integration.rs
(+23 files in other folders)
