[package]
name = "mano-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mano"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.1.1"
insta = "1.42"
predicates = "3.1.3"
rexpect = "0.6.2"
tempfile = "3.23.0"

[dependencies]
ariadne = "0.6"
mano = { path = "../mano" }
rustyline = "17.0.2"
rustyline-derive = "0.11.1"
