[package]
name = "mano-mcp"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "mano-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.9", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.1"
